# azure_devops_backup

./: .gitignore  LICENSE  README.md  azure-pipelines.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
backup_devops/: __main__.py  app_backup.py  git_operations.py  helpers.py
