[tool.poetry]
name = "backup-devops"
version = "0.1.0"
description = ""
authors = ["eric-therond <eric.therond.fr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
azure-devops = "^7.1.0b4"
gitpython = "^3.1.41"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
